src/main/resources/static/css/main.css
/* Reset some default styles */
body, h1, h2, h3, p, ul {
    margin: 0;
    padding: 0;
}


.hero {
    color: #ffcf40;
    text-transform: uppercase;
    margin-bottom: 8px;
    padding: 10px;
    font-family: Inter, sans-serif;
    font-size: 60px;
    line-height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.hero-program-create {
    color: #f3f3f3;
    margin-bottom: 8px;
    padding: 10px;
    font-family: Inter, sans-serif;
    line-height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.hero-clients {
    color: #f3f3f3;
    padding-bottom: 14rem;
    font-family: Inter, sans-serif;
    line-height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* Calendar Styles*/
.hero-calendar {
    width: 100%;
    height: 100%;
    background: linear-gradient(45deg, #6ac1c5, #bda5ff);
    position: relative;

}

#calendar {
    width: 80%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.cmt {
    margin-top: 10rem;
}


.logo {
    color: #ffcf40;
    display: inline-block;
    padding-top: .3125rem;
    padding-bottom: .3125rem;
    margin-right: 1rem;
    font-size: 1.25rem;
    line-height: inherit;
    white-space: nowrap;
}

.navbar {
    transition: all 0.5s ease-in-out;
}

.navbar-sticky {
    opacity: 0.9;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

nav .left a {
    text-decoration: none;
    color: #ffcc00; /* Yellow color */
    font-weight: bold;
    justify-content: center;
}

/* Align the "Fit Launch" link to the left */
nav .left {
    margin-right: auto;
}

nav ul {
    list-style: none;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 10px 0;
    margin-right: 2rem;
}

nav li {
    margin: 0;
}

nav a {
    text-decoration: none;
    color: rgba(255, 255, 255, 0.65);
    font-weight: bold;
    padding: 10px 15px; /* Adjust padding as needed */
    border-radius: 5px;
    transition: background-color 0.3s;
}

nav a:hover {
    color: #fff;
}

nav .left {
    margin-right: 20px; /* Adjust as needed */
}


.navbar-nav .nav-link:hover {
    color: #fff;
}

.header {
    background: url(../images/background-image.jpg) center center no-repeat;
    background-size: cover;
}

.icons {
    margin-top: -1px;
}

.btn {
    display: inline-block;
    padding: 10px 20px;
    color: #f3f3f3;
    text-decoration: none;
    /*border-radius: 5px;*/
    transition: background-color 0.3s;
}

button.th-disabled {
    cursor: not-allowed;
}

.th-disabled-overlay {
    background-color: rgba(128, 128, 128, 0.5); /* Use a semi-transparent gray background color */
    pointer-events: none; /* Make the overlay not clickable */
}

.card-hover {
    transition: transform 0.3s ease; /* Add a smooth transition */
}

.card-hover:hover {
    transform: scale(1.05); /* Increase the size of the card on hover */
}

.lock-icon {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #fff; /* Set the color of the lock icon */
    font-size: 36px; /* Set the font size of the lock icon (adjust as needed) */
    /* Add any other styling for the lock icon */
}

.button-primary {
    border: none;
    width: 100%;
    background-color: #ff6600;
}

.classes {
    padding: 40px;
}

.classes h2 {
    font-size: 24px;
    text-align: center;
    margin-bottom: 20px;
}

.class-card {
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 5px;
    padding: 20px;
    margin: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    text-align: center;
}

.class-card img {
    max-width: 100%;
    height: auto;
    border-radius: 5px;
    margin-bottom: 10px;
}

.class-card h3 {
    font-size: 18px;
    margin-bottom: 10px;
}

.class-card p {
    font-size: 14px;
}

.dark {
    color: #000;
    transition: background-color .15s linear;
}

.light {
    color: #fff;
}

.primary {
    color: #ff9900;
}

.bg-custom-primary {
    color: #ff9900;
}

.card-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.card {
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: transparent;
    background-clip: border-box;
    border: none;
    border-radius: .25rem;
    color: black;
}

.card-exercise {
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: #343a40;
    background-clip: border-box;
    color: #fff;
    border: 1px solid #6c757d;
    border-radius: 10px;
    transition: background-color 0.3s ease;
}

.card-exercise:hover {
    background-color: #495057; /* Darker background color on hover */
}

.card-exercise .card-body {
    padding: 15px;
}

.card-exercise img {
    max-width: 100%;
    height: auto;
    margin-bottom: 10px;
}

.card-deck .card:hover {
    transform: scale(1.05);
    transition: transform 0.3s ease-in-out;
}

.card-img {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
}

.hero, .classes {
    flex-grow: 1;
}

.container, .container-fluid {
    padding-top: 20px;
}

.card-img-top-wrapper {
    object-fit: fill;
    height: 150px;
    overflow: hidden;
}

/* Custom CSS for Create Workout Button */
.btn-create-workout {
    width: 100%; /* Make the button full-width */
    background-color: #007bff; /* Primary color */
    color: #ffffff; /* White text color */
    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition on hover */
}

.btn-create-workout:hover {
    background-color: #0056b3; /* Darker color on hover */
    color: #ffffff; /* White text color on hover */
}

.workout.offer, .workout-details .list-group-item {
    background-image: linear-gradient(to bottom right, rgba(220, 220, 220, 0.9), rgba(255, 255, 255, 0.9));
}


#selectedExercises {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 0;
}

#selectedExercises .list-group-item {
    flex-basis: calc(33.33% - 10px); /* Adjust the percentage and spacing as needed */
    margin-bottom: 10px; /* Add margin between items */
}

.custom-plus {
    font-size: 0.8rem; /* Adjust the size as needed */
    padding: 0.1rem 0.4rem; /* Adjust the padding as needed */
}

.custom-bg-dark {
    background-color: #333; /* Replace with your desired dark color */
    color: #fff; /* Change text color to white or a suitable contrast color */
}

.video-container {
    position: relative;
    width: 100%;
    padding-bottom: 56.25%;
    height: 0;
}

.video-container iFrame {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.my-10 {
    margin-top: 10%;
}

.plan-card-year {
    border: 3px solid #0C57FB !important;
}

.save-badge {
    position: absolute;
    font-weight: bold;
    text-align: center;
    width: 130px;
    height: 28px;
    line-height: 28px;
    border-radius: 4px;
    top: -14px;
    left: 50%;
    margin-left: -65px;
    background-color: #0C57FB;
    color: #fff;
    letter-spacing: 0.03rem;
}

.program-img {
    height: 400px;
    object-fit: cover;
}

.fitness-card {
    background-color: #4CAF50;
    color: #424242;
}

.comments {
    grid-column: 1/4;
    grid-row: 4;
    background-color: lightgray;
    padding: 20px;
    border-radius: 10px;
}

.footer {
    background-color: #333; /* Background color */
    color: #fff; /* Text color */
    padding: 20px 0; /* Padding */
    text-align: center; /* Center align text */
}

.footer a {
    color: #fff; /* Link color */
}

.footer a:hover {
    color: #ccc; /* Link color on hover */
}

.footer .container {
    max-width: 1200px; /* Maximum width of content */
}

.footer .social-links {
    margin-bottom: 20px; /* Margin bottom for social links */
}

.footer .social-links a {
    display: inline-block; /* Display social links inline */
    margin: 0 10px; /* Margin between social links */
    color: #fff; /* Social link color */
    text-decoration: none; /* Remove underline */
    transition: color 0.3s ease; /* Smooth color transition on hover */
}

.footer .social-links a:hover {
    color: #ccc; /* Social link color on hover */
}

.footer .bottom-text {
    margin-top: 20px; /* Margin top for bottom text */
    font-size: 14px; /* Font size */
}

.section-odd {
    background-color: #f8f9fa; /* Light background color for odd sections */
}

.section-even {
    background-color: #e9ecef; /* Lighter background color for even sections */
}

/* Profile Card */

.profile-card:hover {
    transform: translateY(-5px);
}

.profile-img {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    margin: 0 auto 20px;
    overflow: hidden;
    border: 3px solid #fff;
    box-shadow: 0 0 0 5px #f0f0f0;
}

.profile-img img {
    width: 100%;
    height: auto;
}

.profile-name {
    font-size: 20px;
    font-weight: bold;
    color: #333;
    margin-bottom: 10px;
}

.profile-job {
    font-size: 16px;
    color: #777;
    margin-bottom: 20px;
}

.profile-social {
    display: flex;
    justify-content: center;
}

.profile-social a {
    display: inline-block;
    margin: 0 10px;
    color: #333;
    font-size: 24px;
    transition: color 0.3s;
}

.profile-social a:hover {
    color: #55acee;
}


.custom-card {
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    background-color: #fff;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    transition: box-shadow 0.3s ease;
    margin-bottom: 20px;
    overflow: hidden; /* Ensure the meal image does not overflow */
}

.custom-card:hover {
    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
}

.custom-card-header {
    display: flex;
    align-items: center;
    padding: 10px;
}

.meal-image {
    width: 100px; /* Adjust the width as needed */
    height: 100px; /* Adjust the height as needed */
    overflow: hidden;
    margin-right: 15px;
}

.meal-image img {
    width: 100%; /* Make the image fill the container */
    height: auto; /* Maintain aspect ratio */
    object-fit: cover; /* Ensure the image covers the entire container */
}

.meal-details {
    flex-grow: 1; /* Allow the meal details to take up remaining space */
}

.custom-card-body {
    padding: 15px;
}

.form-group {
    margin-bottom: 10px;
}

.form-check-label {
    color: #212529;
}

.form-check-input:checked + .form-check-label::before {
    background-color: #007bff;
    border-color: #007bff;
}

.form-check-input:focus + .form-check-label::before {
    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
}

